// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow empty definitions allow empty definitions 1`] = `
"/**
 * This file was auto-generated by openapi-typescript.
 * Do not make direct changes to the file.
 */

export interface paths {
  \\"/pet\\": {
    post: operations[\\"addPet\\"];
  };
}

export interface operations {
  addPet: {
    parameters: {
      body: {
        /** Pet object that needs to be added to the store */
        body: definitions[\\"Pet\\"];
      };
    };
    responses: {
      /** Invalid input */
      405: unknown;
    };
  };
}

export interface external {}
"
`;

exports[`allow empty definitions allow empty definitions 2`] = `
"/**
 * This file was auto-generated by openapi-typescript.
 * Do not make direct changes to the file.
 */

export interface paths {
  readonly \\"/pet\\": {
    readonly post: operations[\\"addPet\\"];
  };
}

export interface operations {
  readonly addPet: {
    readonly parameters: {
      readonly body: {
        /** Pet object that needs to be added to the store */
        readonly body: definitions[\\"Pet\\"];
      };
    };
    readonly responses: {
      /** Invalid input */
      readonly 405: unknown;
    };
  };
}

export interface external {}
"
`;
